--- a/src/styles/-WebsiteList.scss
+++ b/src/styles/-WebsiteList.scss
@@ -448,6 +448,10 @@
         right:-20px;
     }
 }
+.WebsiteCard.el-card{
+    background:#fff!important;
+    border-radius:8px!important;
+}
 @media (max-width:1024px){
     .WebsiteOne{
         .WebsiteOneTable{
