--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -1,9 +1,12 @@
 ﻿// base color
 $blue:#4c54fe;
 $light-blue:#3A71A8;
-$red:#C03639;
+$red:#f73a3e;
+$Rougecolor:#d02c34;
+$Redapricot:#fb7d23;
+$apricot:#f8a53a;
 $pink: #E65D6E;
-$green: #2e9cf6;
+$green: #49c96a;
 $tiffany: #2e4cf6;
 $yellow:#FEC171;
 $panGreen: #1a6fdf;
