--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -676,6 +676,15 @@
             line-height:1.3;
             color:#0b0b0b;
         }
+        h2{
+            clear:both;
+            display:block;
+            text-align:left;
+            font-size:20px;
+            line-height:1.3;
+            color:#0b0b0b;
+            padding-top:10px;
+        }
         .ArticleSixFlTopTag{
             clear:both;
             padding-top:20px;
@@ -712,7 +721,12 @@
                 padding-top:3px;
                 padding-bottom:3px;
                 span{
-                    margin:0 20px;
+                    margin:0 10px;
+                }
+                .svg-i{
+                    margin-right:5px;
+                    font-size: 14px;
+                    vertical-align: top;
                 }
             }
         }
@@ -763,6 +777,8 @@
         }
     }
     .ArticleCard{
+        background:#fff;
+        border-radius:8px;
         .card-content{
             position: relative;
         }
