--- a/src/styles/-sidebar.scss
+++ b/src/styles/-sidebar.scss
@@ -52,6 +52,9 @@
           .sub-el-icon {
             vertical-align: -1px;
             margin-right:0;
+            color: currentColor;
+            width: 1em;
+            height: 1em;
           }
           i{
             color: #212121;
