--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,7 +13,10 @@
 @import './-WebsiteList.scss';
 @import './-WebserverList.scss';
 @import './-logsIndex.scss';
+@import './-errorPage.scss';
+@import './-login.scss';
 @import './-userIndex.scss';
+@import './-userCenter.scss';
 @import './-ownPush.scss';
 @import './-enCnProduct.scss';
 @import './-Article.scss';
@@ -39,6 +42,12 @@
       overflow:hidden;
     }
   }
+  .search-dialog{
+    .el-dialog__body{
+      padding:0!important;
+      position:relative;
+    }
+  }
 }
 /**/
 .SiteBtn{
@@ -61,7 +70,7 @@
     }
   }
 }
-/**/
+/** 区域滚动样式 **/
 .scroll-panel{
   width:100%;
   height:100%;
@@ -73,6 +82,7 @@
   vertical-align:middle;
 }
 .bg-white{background-color:#fff;}
+/** 卡片代码统一样式 **/
 .box-card{
   width:100%;
   height:100%;
@@ -117,6 +127,7 @@
     }
   }
 }
+/** 分页页码统一样式 **/
 .pagination-panel{
   overflow:hidden;
   &.top-page{
@@ -133,10 +144,12 @@
   }
 }
 
+/** 页面加载进度条样式 **/
 #nprogress .bar{
   background-color:$menuActiveText!important;
 }
 
+/** 职称图片标识样式 **/
 .JobLevel_1, .JobLevel_2, .JobLevel_3, .JobLevel_4, .JobLevel_5, .JobLevel_6, .JobLevel_7, .JobLevel_8 { position:relative; display:block; width:90px; margin:10px auto; height:24px; font-size:0;overflow:initial; }
 .JobLevel_1:before, .JobLevel_2:before, .JobLevel_3:before, .JobLevel_4:before, .JobLevel_5:before, .JobLevel_6:before, .JobLevel_7:before, .JobLevel_8:before { content:''; position:absolute; display:block; left:-11px; top:-10px; bottom:-10px; right:-11px; background-position:center; background-repeat:no-repeat; -webkit-background-size:100% auto; background-size:100% auto; }
 .JobLevel_6:before { background-image:url(../../public/level_1_bg.png); }
@@ -147,14 +160,8 @@
 .JobLevel_2:before { background-image:url(../../public/level_6_bg.png); }
 .JobLevel_8:before { background-image:url(../../public/level_7_bg.png); }
 .JobLevel_1:before { background-image:url(../../public/level_8_bg.png); }
-.page-root{
-  .search-dialog{
-    .el-dialog__body{
-      padding:0!important;
-      position:relative;
-    }
-  }
-}
+
+/** 移动端搜索弹窗统一样式 **/
 .search-dialog{
   width:90%;
   max-height:80%;
