--- a/src/styles/-WebserverList.scss
+++ b/src/styles/-WebserverList.scss
@@ -89,7 +89,7 @@
         background-color:#1890ff!important;
         border-color:#1890ff!important;
         font-size:16px!important;
-        width:96px;
+        min-width:96px;
         box-sizing:border-box!important;
         height:35px;
         line-height:33px!important;
