--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -104,13 +104,14 @@
           }
         }
         .el-card__body{
-          padding:30px 15px;
+          padding:0px;
           height: 100%;
           overflow: hidden;
           .el-scrollbar{
             height: 100%;
             .el-scrollbar__wrap{
               overflow-x: hidden;
+              padding:30px 15px;
             }
             .el-scrollbar__view{
               padding-bottom: 15px;
@@ -125,229 +126,7 @@
           .card-header{
             padding: 5px;
           }
-        }            
-        //.el-select{
-        //   display: block;
-        //}
-        //.form-title{
-        //width: 110px;
-        //display: inline-block;
-        //text-align: right;
-        //vertical-align: middle;
-        //font-size: 14px;
-        //color: #606266;
-        //line-height: 36px;
-        //padding: 0 12px 0 0;
-        //box-sizing: border-box;
-        //}
-        //.item-form.icon{
-        //padding-right: 76px;
-        //}
-        //.item-form{
-        //    padding-right: 30px;
-        //    position: relative;
-        //    .icon-button{
-        //    width: 36px;
-        //    height: 36px;
-        //    position: absolute;
-        //    top:0;
-        //    right: 30px;
-        //    border: 1px solid #C0C4CC;
-        //    border-radius: 4px;
-        //    text-align: center;
-        //    line-height: 34px;
-        //    font-size: 18px;
-        //    color: #999;
-        //    cursor: pointer;
-        //    }
-        //    >span{
-        //    display: block;
-        //    width: 30px;
-        //    height: 36px;
-        //    position: absolute;
-        //    right:0;
-        //    top:0;
-        //    text-align: center;
-        //    line-height: 36px;
-        //    font-size: 14px;
-        //    cursor: pointer;
-        //    color: #bbb;
-        //    }
-        //    &:before,
-        //    &:after {
-        //    content: "";
-        //    display: table;
-        //    }
-        //    &:after {
-        //    clear: both;
-        //    }
-        //}
-        //.item-form-group{
-        //width: 100%;
-        //&:before,
-        //&:after {
-        //    content: "";
-        //    display: table;
-        //}
-        //&:after {
-        //    clear: both;
-        //}
-        //.item-form-3{
-        //    width: 180px;
-        //    float:left;
-        //    padding-right: 30px;
-        //    position: relative;
-        //    &:before,
-        //    &:after {
-        //    content: "";
-        //    display: table;
-        //    }
-        //    &:after {
-        //    clear: both;
-        //    }
-        //    >span{
-        //    display: block;
-        //    width: 30px;
-        //    height: 36px;
-        //    position: absolute;
-        //    right:0;
-        //    top:0;
-        //    text-align: center;
-        //    line-height: 36px;
-        //    font-size: 14px;
-        //    cursor: pointer;
-        //    color: #bbb;
-        //    }
-        //}
-        //.item-form{
-        //    width: 50%;
-        //    float:left;
-        //    }
-        //}
-        //.product-span{
-        //    i{
-        //        font-style: normal;
-        //        font-weight: bold;
-        //    }
-        //    &.level_1{
-        //        i{color:#B3315F};
-        //    }
-        //    &.level_2{
-        //        i{
-        //            color: #130CB7;
-        //        }
-        //    }
-        //    &.level_3{
-        //        i{
-        //            color: #6a6a6b;
-        //        }
-        //    }
-        //}
-        //.absolute-panel{
-        //position: absolute;
-        //left:0;
-        //top:0;
-        //width: 100%;
-        //height: 100%;
-        //}
-        //.table-input{
-        //.el-input+.el-input{
-        //    margin-top: 10px;
-        //}
-        //.el-input{
-        //    ::v-deep .el-input__inner{
-        //    padding: 0 10px!important;
-        //    }
-        //}
-        //.el-textarea{
-        //    ::v-deep .el-textarea__inner{
-        //    padding: 5px 10px!important;
-        //    }
-        //}
-        //}
-        //.table-text{
-        //p{
-        //    a{
-        //    color: $menuActiveText;
-        //    &:hover{
-        //        text-decoration: underline;
-        //    }
-        //    }
-        //}
-        //}
-        //.table-tag{
-        //.level{
-        //    display: inline-block;
-        //    border-radius: 4px;
-        //    padding: 0 5px;
-        //    color: #fff;
-        //}
-        //.level-1{
-        //    background: #ff0000;
-        //}
-        //.level-2{
-        //    background: #eab905;
-        //}
-        //.level-3{
-        //    background: #293cfc;
-        //}
-        //.level-4{
-        //    background: #1acfda;
-        //}
-        //.level-5{
-        //    background: #f6b37f;
-        //}
-        //.level-6{
-        //    background: #7e84fd;
-        //}
-        //}
-        //.export-dialog{
-        //.el-form-item{
-        //    margin-right:0!important;
-        //    width: 100%;
-        //    ::v-deep .el-form-item__content{
-        //    width: 240px;
-        //    .el-select,.el-input{
-        //        width: 100%;
-        //    }
-        //    }
-        //}
-        //}
-        //.item-box{
-        //flex:1;
-        //.box-card{
-        //    margin-bottom: 15px;
-        //    .item-num{
-        //    font-size:0;
-        //    line-height:0;
-        //    text-align: center;
-        //    overflow: hidden;
-        //    padding: 60px 0;
-        //    dl{
-        //        display: inline-block;
-        //        vertical-align: top;
-        //        overflow: hidden;
-        //        dt,dd{
-        //        display: block;
-        //        width: 100%;
-        //        text-align: right;
-        //        }
-        //        dt{
-        //        font-size: 16px;
-        //        line-height: 1.5;
-        //        }
-        //        dd{
-        //        font-size: 48px;
-        //        line-height: 1;
-        //        color: #fc5457;
-        //        }
-        //    }
-        //    }
-        //}
-        //}
-        //.item-box+.item-box{
-        //margin-left: 15px;
-        //}
+        }
     }
 }
 .box-card.EnphoneCardFrDate{
@@ -365,4 +144,267 @@
              margin-bottom:30px;
          }
      }
+}
+.EnphoneAddEdit{
+  background:#fff;
+  padding: 20px 30px;
+  .EnphoneAddEditMain{
+    .EnphoneAddEditMainItem{
+        position: relative;
+        padding-top:10px;
+        padding-bottom:5px;
+        &.CnphoneAdd{
+          padding-top:20px;
+          padding-bottom:15px;
+        }
+        dl{
+          float: left;
+          dt{
+            line-height: 24px;
+            font-size: 14px;
+            span{
+              color:red;
+            }
+          }
+          dd{
+            margin-top: 5px;
+            .clues-list{
+              &.price-list{
+                .item-clues{
+                  width: 147px;
+                }
+              }
+              &.level-list{
+                .item-clues{
+                  width: 104px;
+                }
+              }
+            }
+            p{
+              line-height: 32px;
+              font-size: 12px;
+            }
+          }
+        }
+        &.phone-list{
+          dl{
+            dd{
+              .clues-list{
+                .item-clues{
+                  float:left;
+                  position: relative;
+                  font-size: 14px;
+                  color:$menuBg;
+                  cursor: pointer;
+                  padding-left: 20px;
+                  line-height: 24px;
+                  margin-right: 20px;
+                  margin-bottom: 5px;
+                  i{
+                    position: absolute;
+                    left:0px;
+                    top:6px;        
+                    width: 12px;
+                    height: 12px;
+                    box-sizing: border-box;
+                    border-radius:50%;
+                    border:1px solid #939393;
+                    background:#fff;
+                  }
+                  &:hover,&.active{
+                    color:$menuActiveText;
+                    i{
+                      border-color:$menuActiveText;
+                      &:after{
+                        content:'';
+                        position: absolute;
+                        width:4px;
+                        height:4px;
+                        border-radius:50%;
+                        left:3px;
+                        top:3px;
+                        background:$menuActiveText;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+        &.customer-info{
+          dl{
+            float: left;
+            width:18.4%;
+            margin-left: 2%;
+            padding-bottom:5px;
+            &:first-child{margin-left:0;}
+          }
+        }
+        &.specifications{
+          dl{
+            float: left;
+            width:47.5%;
+            margin-left:5%;
+            padding-bottom:5px;
+            &:first-child{margin-left:0;}
+            .spectextarea{
+              .el-textarea__inner{
+                padding: 10px 15px;
+                line-height: 24px;
+              }
+            }
+            .prompt{
+              span{font-size:14px;line-height:32px;display: inline-block; padding-right:5px;}
+            }
+            .remind{
+              padding-bottom:5px;
+            }
+            .upload{
+              .el-upload{
+                float: left;
+              }
+              .el-upload__tip{
+                float: left;
+                padding-left: 30px;
+              }
+              .el-upload-list{
+                float: right;
+                .el-upload-list__item{
+                  line-height:32px;
+                  .el-icon-close{
+                    top: 9px;
+                  }
+                  &:first-child{
+                    margin-top:0px;
+                  }                  
+                }
+              }
+            }
+          }
+        }
+        &.IntentionEquipment{
+          dl{
+            dd{
+              strong{
+                clear: both;
+                display: block;
+                font-weight:normal;
+                font-size:14px;
+                text-align: left;
+                padding-bottom:10px;
+              }
+              .clues-list{
+                padding-bottom:20px;
+                .el-checkbox{margin-bottom:5px;}
+              }
+            }
+          }
+        }
+        &.CnIntentionEquipment{
+          dl{
+            dd{
+              .clues-list{
+                .item-clues{
+                  float:left;
+                  position: relative;
+                  font-size: 14px;
+                  color:$menuBg;
+                  cursor: pointer;
+                  padding-left: 20px;
+                  line-height: 24px;
+                  margin-right: 20px;
+                  margin-bottom: 5px;
+                  i{
+                    position: absolute;
+                    left:0px;
+                    top:6px;        
+                    width: 12px;
+                    height: 12px;
+                    box-sizing: border-box;
+                    border-radius:2px;
+                    border:1px solid #939393;
+                    background:#fff;
+                  }
+                  &:hover,&.active{
+                    color:$menuActiveText;
+                    i{
+                      border-color:$menuActiveText;
+                      background:$menuActiveText;
+                      &:after{
+                        content: "";
+                        transform: rotate(45deg) scaleY(1);
+                        box-sizing: content-box;
+                        border: 1px solid #fff;
+                        border-left: 0;
+                        border-top: 0;
+                        height: 7px;
+                        left: 3px;
+                        position: absolute;
+                        top: 0px;
+                        width: 3px;
+                        transition: transform 0.15s ease-in 0.05s;
+                        transform-origin: center;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+        &.material{
+          dl{
+            float: left;
+            width:30%;
+            margin-left:5%;
+            padding-bottom:5px;
+            &:first-child{margin-left:0;}
+            dd{
+              clear: both;
+              padding-bottom: 10px;
+              span{
+                font-size:14px;
+                line-height:32px;
+              }
+              &.CustomerNote{
+                position: relative;
+                padding-bottom:25px;
+                i{
+                  position: absolute;
+                  left:0px;
+                  bottom:0px;
+                  font-size:12px;
+                  color:#333;
+                  line-height: 20px;
+                  font-style: normal;
+                }
+              }
+            }
+          }
+        }
+        &.author{
+          padding-top:20px;
+          padding-bottom:20px;
+          dl{
+            float: left;
+            width:30%;
+            margin-left:5%;
+            padding-bottom:5px;
+            &:first-child{margin-left:0;}
+            dd{
+              clear: both;
+              padding-bottom: 10px;
+              & > span{
+                font-size:14px;
+                line-height:32px;
+              }
+            }
+          }
+        }
+      }
+  }
+  .WebServerAddEditBtn.EnphoneAddEditBtn{    
+    padding:20px 0px 20px 0px;
+  }
 }
