--- a/src/styles/-logsIndex.scss
+++ b/src/styles/-logsIndex.scss
@@ -15,3 +15,13 @@
         }
     }
 }
+.website-log{
+    .box-card{
+        .el-card__header{
+            padding:0;
+            margin-bottom: 10px;
+            background: none;
+            border-radius:0;
+        }
+    }
+}
