--- a/src/styles/-ownPush.scss
+++ b/src/styles/-ownPush.scss
@@ -8,4 +8,9 @@
             width: 150px;
         }
     }
+    .clues-title{
+        margin-top: 10px;
+        padding-top: 20px;
+        border-top: 1px solid #eaeef0;
+    }
 }
