--- a/public/ueditor/dialogs/video/video.css
+++ b/public/ueditor/dialogs/video/video.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
+label{font-size: 14px;}
 .wrapper{ width: 570px;_width:575px;margin: 10px auto; zoom:1;position: relative}
-.tabbody{height: 335px;}
+.tabbody{height: 335px;font-size: 14px;}
 .tabbody .panel {
     position: absolute;
     width: 0;
@@ -67,7 +68,7 @@ fieldset{
     padding-bottom: 5px;
     width: 115px;
 }
-fieldset legend{font-weight: bold;}
+fieldset legend{font-weight: bold;font-size: 14px;}
 fieldset p{line-height: 30px;}
 fieldset input.txt{
     width: 65px;
@@ -76,8 +77,9 @@ fieldset input.txt{
     margin: 8px 5px;
     background: #FFF;
     border: 1px solid #d7d7d7;
+    font-size: 14px;
 }
-label.url{font-weight: bold;margin-left: 5px;color: #06c;}
+label.url{font-weight: bold;margin-left: 5px;color: #06c;font-size:14px;}
 #videoFloat div{cursor:pointer;opacity: 0.5;filter: alpha(opacity = 50);margin:9px;_margin:5px;width:38px;height:36px;float:left;}
 #videoFloat .focus{opacity: 1;filter: alpha(opacity = 100)}
 span.view{display: inline-block;width: 30px;float: right;cursor: pointer;color: blue}
