--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -482,6 +482,17 @@
             display: block;
             background: #fff;
             z-index: 2;
+            &.no-comment{
+                .ArticleSixFrTopMain{
+                    margin-bottom:0;
+                    &:after{
+                        display: none;
+                    }
+                    .btn-rich{
+                        padding-bottom:0;
+                    }
+                }
+            }
             .ArticleSixFrTopHeader{
                 font-size:20px;
                 color:#383838;
@@ -548,10 +559,10 @@
                         box-shadow:0px 5px 10px rgba(247,142,66,0.75);
                         border: 0px;
                         padding: 0px;
+                        font-weight: bold;
+                        transition: all .3s;
                         &:hover{
-                            color:#fff;
-                            background:#000;
-                            box-shadow:0px 5px 10px rgba(0,0,0,0.75);
+                            box-shadow:0px 1px 2px rgba(247,142,66,0.75);
                         }
                     }
                 }
@@ -776,19 +787,11 @@
           }
         }
     }
-    .ArticleCard{
+    .ArticleCard,.WebsiteCard{
         background:#fff;
         border-radius:8px;
         .card-content{
             position: relative;
-        }
-        .abs-panel{
-            position: absolute;
-            left:0;
-            top:0;
-            right:0;
-            bottom:0;
-            overflow: hidden;
         }
         .main-content{
             border-radius: 8px;
