--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,7 @@
 @import './Chinaphone.scss';
 @import '-Enphone.scss';
 @import '-Sale.scss';
+@import '-webMsg.scss';
 .page-root{
   position:absolute;
   left:0;
@@ -31,7 +32,7 @@
   width:100%;
   height:100%;
   overflow:hidden;
-  padding:20px;
+  padding:15px;
   .el-dialog__body{
     padding:20px!important;
   }
@@ -75,7 +76,7 @@
 .scroll-panel{
   width:100%;
   height:100%;
-  padding:20px;
+  padding:15px;
   overflow-x:hidden;
   overflow-y:auto;
 }
@@ -103,9 +104,9 @@
     height:auto;
   }
   .el-card__header{
-    padding:20px;
+    padding:15px;
     background:#fff;
-    margin-bottom:20px;
+    margin-bottom:15px;
     border-radius:8px;
     border:none;
   }
@@ -656,9 +657,11 @@
   .el-table__placeholder{
     display:none!important;
   }
-  //.el-table__expand-icon{
-  //  display:none!important;
-  //}
+  &.homeTable{
+    .el-table__expand-icon{
+      display:none!important;
+    }
+  }
   .article-title{
     cursor:pointer;
     padding-left:10px;
@@ -668,7 +671,6 @@
     border-bottom:1px solid #e2e9ed;
   }
   .table-tag{
-    text-align: center;
     .el-tag{
       margin: 2px;
     }
@@ -1088,10 +1090,6 @@
       }
     }
   }
-}
-/** 绝对定位按钮层，页面滚动统一样式 **/
-.abs-scroll-panel{
-  padding:0;
 }
 @media (max-width:1600px){
   .article-info{
